# OmNote

./: LICENSE.md  Makefile  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: omnote-install-smoketest.yml
src/micropad/: __init__.py  app.py  theme.py  window.py
src/omnote/: __main__.py  app.py  findbar.py  replace.py  state.py  theme.py  window.py
tests/: __init__.py  conftest.py  test_replace.py  test_replace_logic.py  test_state.py
